<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:context=".view.DetectorActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_upload"
                android:textColor="#405F6E"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"/>

            <ImageView
                android:id="@+id/image_upload"
                android:layout_width="250dp"
                android:layout_height="350dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center|top"
                android:adjustViewBounds="true"
                android:background="@color/background"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/roundbutton"
                    android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/roundbutton"
                    android:drawableLeft="@drawable/ic_baseline_insert_photo_24"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/name_penyakit"/>
                </LinearLayout>

                    <TextView
                        android:id="@+id/text_penyakit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/nama_penyakit"
                        android:textSize="16sp"
                        android:textStyle="italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/solusi"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/text_solusi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/isi_solusi"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/roundbuttonaccent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/deteksi"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>